--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "homepage": "https://github.com/spring-dev-deepak/facebook#readme",
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.8",
+    "validator": "^13.1.17"
   }
 }
